# canpl-bet

./: .gitignore  .pre-commit-config.yaml  README.md  api.env  backtest_2025.py  build_targets.py  check_names.py  evaluate_neutral.py  pyproject.toml  requirements.txt  run_james_pipeline.py  run_pipeline.py  scrape_cpl_stats.py  test_delete_2022.py  validate_team_strength.py
Code/: combine_tables.py  config.py  cpl_match_stats.py  cpl_player_stats.py  cpl_player_stats_per_year.py  cpl_table_team_stats.py  cpl_team_stats.py  matches_concat.py  scrape_cpl_stats.py
Notes/: Notes.md  QUICK_MAP.MD
betting_odds/: are_odds_there.py  canpl_2025_bet365_historical.py  canpl_2025_fixtures.py  canpl_fixtures_2025.csv  download_canpl_bet365_historical.py  download_canpl_fixtures.py  oddsapi_discovery.py
data/: 2025_canpl_team_stats.csv  cpl_player_stats.py  players_046f_defender.csv  players_046f_forward.csv  players_046f_goalkeeper.csv  players_046f_midfielder.csv  players_11aa_defender.csv  players_11aa_forward.csv  players_11aa_goalkeeper.csv  players_11aa_midfielder.csv  players_2f07_defender.csv  players_2f07_forward.csv  players_2f07_goalkeeper.csv  players_2f07_midfielder.csv  players_6fb9_defender.csv  players_6fb9_forward.csv  players_6fb9_goalkeeper.csv  players_6fb9_midfielder.csv  players_c8c9_defender.csv  players_c8c9_forward.csv  players_c8c9_goalkeeper.csv  players_c8c9_midfielder.csv  players_fc08_defender.csv  players_fc08_forward.csv  players_fc08_goalkeeper.csv  players_fc08_midfielder.csv  players_fd43_defender.csv  players_fd43_forward.csv  (+2 more)
(+128 files in other folders)
